Fix product modal

--- a/index.html
+++ b/index.html
@@ -277,7 +277,9 @@
          <p>Your order has been placed and will be delivered at your home within 3 to 4 days.</p>
         </div>
       <form id="orderForm">
-
+<div class="mb-3">
+        <h2><b>Place Order</b></h2>
+    </div>
     <div class="mb-3">
         <label for="customerName" class="form-label">Customer Name</label>
         <input type="text" class="form-control" id="customerName" required>
