--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <i class="fab fa-facebook-f"></i>
         </a> <a href="https://www.instagram.com/zanix_officals/" target="_blank" rel="noopener noreferrer">
           <i class="fab fa-instagram"></i>
-          </a> <a href="https://www.tiktok.com/@zionwatchworks" target="_blank" rel="noopener noreferrer">
+          </a> <a href="https://www.tiktok.com/@zanix_officials" target="_blank" rel="noopener noreferrer">
             <i class="fab fa-tiktok"></i>
             </a>
       </div>
